<resources>
                 <string name="txt_cancelll">"اغلاق"</string>
    <string name="txt_signup_success3">"تم تسجيلك في ليب بيري بنجاح ولكن حسابك غير مفعل. فضلاً التحقق من بريدك المسجل و بريد الغير هام (junk, Spam)"</string>
              <string name="txt_there_is_no_follower">"لا يوجد هناك من تتابعينهن"</string>
             <string name="txt_articleid_not_found">"This article was not found "</string>
                 <string name="txt_you_are_not_following">"لا يمكن ارسال رسالة خاصة للمشتركة لانك لا تتابعيها"</string>
                         <string name="txt_emailis_sent_toactiviate">" تم ارسال بريد الكتروني لتفعيل تسجيلك"</string>
            <string name="txt_follow_success">"تم اضافه الصور للألبوم "</string>
        <string name="txt_img_upload_succes">"تم اضافه الصور للألبوم "</string>
    <string name="txt_send_mail">"إرسال بريد إلكتروني"</string>
        <string name="txt_thanks">"شكراً لك"</string>
        <string name="txt_shared_via">"نشر بواسطة"</string>
        <string name="txt_find_member">"ابحثي عن مشتركة "</string>
    <string name="txt_deleted_succesfully">"تم مسح هذه الرسلة"</string>
    <string name="txt_suc_like_comments">"تم اعجابك بالتعليق"</string>
    <string name="txt_already_following">"تتابعينها"</string>
    <string name="txt_like_success">"تم الاعجاب بنجاح"</string>
    <string name="txt_upload_success">"تم تحديث الصورة بنجاح"</string>
    <string name="txt_logout_success">"تم تسجيل خروجك بنجاح"</string>
    <string name="txt_no_member_found2">"لا يوجد مشتركة بهذا الاسم ، الرجاء البحث بإسم المستخدم فقط"</string>
    <string name="txt_show_self_follow">"لا يمكنك متابعة نفسك "</string>
    <string name="txt_mszsendto_email">"لقد تم ارسال الرسالة بنجاح. فضلاً التحقق من بريدك الالكتروني "</string>
    <string name="app_name">"ليب بيري "</string>
    <string name="txt_weekly_news1">"ايقاف استلام النشرة الاسبوعية"</string>
    <string name="txt_stop_emailmessage">"ايقاف استلام الرسائل الخاصة عبر البريد الإلكترونى"</string>
    <string name="txt_stop_privatemessage">"ايقاف خدمة إرسال الرسائل الخاصة "</string>
    <string name="txt_stop_commentMails">"ايقاف استلام تنبيه التعليقات عبر البريد الالكتروني"</string>
    <string name="txt_stop_followerMails">"ايقاف استلام تنبيه بالمتابعات الجدد "</string>
    <string name="txt_stop_likeArtMails">"ايقاف استلام تنبيه الاعجاب على ال ​تدوينات"</string>
    <string name="txt_not_allod_to_send_msz">"غير مسموح بإرسال رساله خاصه لهذه المشتركه​"</string>
    <string name="txt_report">"إبلاغ عن إساءة"</string>
    <string name="txt_image_loading">"جاري تحميل الصورة​"</string>
    <string name="txt_no_like">"لم يتم الاعجاب بهذه التدوينة من قبل أي من المشتركات​"</string>
    <string name="txt_no_comments1">"لا يوجد أي تعليق على هذه التدوينة"</string>
    <string name="txt_send_msz">"رسال رساله"</string>
    <string name="txt_contact_us_url">"http://www.lipberry.com/ContactUs/%D8%A7%D8%AA%D8%B5%D9%84-%D8%A8%D9%86%D8%A7/"</string>
    <string name="txt_contact_us">"تصلي بنا"</string>
    <string name="txt_choose">"اختاري القسم"</string>
    <string name="txt_cant_send_msz">"غير مسموح لك بإرسال رساله لهذه المشتركة"</string>
    <string name="txt_connect">"ربط "</string>
    <string name="txt_enter_your_comment"> "اكتب تعليقك هنا"</string>
    <string name="txt_cancel"> "الغاء"</string>
    <string name="txt_ok"> "تأكيد"</string>
    <string name="txt_image_is_loading">"تحميل الصورة "</string>
    <string name="txt_already_liked">"لقد تم الاعجاب بهذه المشاركة من قبل"</string>
    <string name="txt_comment">"تم اضافة التعليق"</string>
    <string name="txt_subject">"العنوان "</string>
    <string name="txt_to">"إلى"</string>
    <string name="txt_send">"إرسال"</string>
    <string name="txt_enter_member">"فشل في الارسال. يمكنك ارسال رساله فقط للمشتركات التي تتابعينهن ‎‎"</string>
    <string name="txt_sent_msz">"ارسلي رسالة"</string>
    <string name="txt_msz_is_sent">"تم ارسال الرساله بنجاح"</string>
    <string name="txt_enter_msz">"الرجاء كتابة نص الرسالة "</string>
    <string name="txt_write_msz">"اكتب رسالتك هنا"</string>
    <string name="txt_reply">"الرد"</string>
    <string name="txt_inbox">"الرسائل "</string>
    <string name="txt_you_dont_have_msz">"لا يوجد لديك أي رسالة "</string>
    <string name="txt_update">"تحديث"</string>
    <string name="txt_goto_gallery">"الذهب الى الألبوم "</string>
    <string name="txt_take_picture">"التقط صورة"</string>
    <string name="txt_please_selct_img">"الرجاء اختيار صورة أولاُ"</string>
    <string name="txt_edit_profile">"تعديل الملف"</string>
    <string name="txt_sys_noti_msz">"إلغاء استلام رسائل الاشعارات من الموقع"</string>
    <string name="txt_weekly_news">"إيقاف استلام النشرة الاسبوعية"</string>
    <string name="txt_dir_msz">"ايقاف استلام الرسائل الخاصة عبر البريد الإلكتروني"</string>
    <string name="txt_allow_member_todirect_msz">"ايقاف خدمة إرسال الرسائل الخاصة"</string>
    <string name="txt_push_new_msz_notifi">"ايقاف تنبية اشعارات التطبيق"</string>
    <string name="txt_save_setting">"حفظ الاعدادات"</string>
    <string name="txt_save_profile">"حفظ الملف"</string>
    <string name="txt_brief">"نبذه عني"</string>
    <string name="txt_site_url">"رابط الموقع"</string>
    <string name="txt_change_photo">"تحديث الصورة"</string>
    <string name="txt_menu">"القائمة الرئيسيه "</string>
    <string name="txt_write_topic_failure">"فشل في اضافة المشاركة "</string>
    <string name="txt_write_topic_success">"تم اضافة المشاركة بنجاح "</string>
    <string name="txt_please_required_field">"الرجاء تعبئة الحقول المطلوبة"</string>
    <string name="txt_writing_topic">"كتابة مشاركة "</string>
    <string name="txt_please_select_category">"الرجاء اختيار القسم"</string>
    <string name="txt_please_enter_title">"الرجاء ادخال عنوان المشاركة "</string>
    <string name="txt_add_more_phto">"اضافه المزيد من الصور في ألبوم "</string>
    <string name="txt_retreiving_category">"استعادة الأقسام "</string>
    <string name="txt_title">"العنوان "</string>
    <string name="txt_article_body">"نص المشاركة"</string>
    <string name="txt_select_photo">"اختيار صورة "</string>
    <string name="txt_video_url">"رابط الفيديو"</string>
    <string name="txt_enter">"ادخال"</string>
    <string name="app_name_arabic">"ليب بيري"</string>
    <string name="txt_signing_in">"تسجيل الدخول"</string>
    <string name="txt_please_enter_password">"الرجاء ادخال كلمة السر"</string>
    <string name="txt_uname_cant_lessthan">"اسم المستخدم يجب أن لا يكون اقل من 3 حروف"</string>
    <string name="txt_uname_cant_more">"اسم المستخدم يجب أن لا يكون أكثر من 10 حروف"</string>
    <string name="txt_uname_spec">"يجب أن يبدأ اسم المستخدم بحرف. يمكن استخدام الحروف و الأرقام و - فقط"</string>
    <string name="txt_loading">"تحميل"</string>
    <string name="txt_please_enter_email"> الرجاء ادخال البريد الإلكتروني"</string>
    <string name="txt_please_wait"> "الرجاء الانتظار"</string>
    <string name="txt_please_select_country_first"> "الرجاء اختيار البلد أولاً"</string>
    <string name="txt_retreiving_country"> "استعادة قائمة المدينه"</string>
    <string name="txt_enter_name"> "الرجاء ادخال اسمك"</string>
    <string name="txt_enter_nicknamename"> "الرجاء ادخال الاسم المستعار"</string>
    <string name="txt_condition_nickname"> "الاسم المستعار يجب أن لا يكون أقل من 3 أحرف"</string>
    <string name="txt_condition_nicknamemore"> "الاسم المستعار يجب أن لا يزيد عن 10 أحرف"</string>
    <string name="txt_enter_email"> "الرجاء ادخال بريد إلكتروني صحيح"</string>
    <string name="txt_enter_password"> "الرجاء ادخال كلمة السر"</string>
    <string name="txt_enter_confirm"> "الرجاء تأكيد كلمة السر"</string>
    <string name="txt_select_city"> "الرجاء اختيار المدينة"</string>
    <string name="txt_select_country"> "الرجاء اختيار المدينة"</string>
    <string name="txt_select_know_us"> "الرجاء الاختيار كيف عرفتي عن ليب بيري"</string>
    <string name="txt_match_pass"> "كلمة السر و الاعادة غير متطابقتان "</string>
    <string name="txt_not_available"> "غير متوفر"</string>
    <string name="txt_no_city_found"> "المدينة غير موجودة"</string>
    <string name="txt_exit"> "هل تريد الخروج؟"</string>
    <string name="txt_yes"> "نعم "</string>
    <string name="txt_no"> "لا "</string>
    <string name="txt_take_photo"> "التقاط صورة "</string>
    <string name="txt_from_gallery"> "اختيار من الألبوم "</string>
    <string name="txt_from_cancel"> "إلغاء"</string>
    <string name="txt_you_have_selcect_image"> "لقد تم اختيار صورة "</string>
    <string name="txt_failed_to_select_an_image"> "فشل في اختيار صورة "</string>
    <string name="txt_resend_aciviation"> "لم يتم تسجيل دخولك لأن حسابك غير مفعل.فضلاً التحقق من بريدك المسجل و بريد الغير هام (Junk, Spam) .إذا لم تصلك رسالة التفعيل عبر بريدك المسجل يمكنك طلبها مره اخرى من "</string>
<string name="txt_password_length"> "Password can't less than 6 characters"</string>
    <string name="txt_my_page">"صفحتي"</string>
    <string name="inbox_msz">"الرسائل"</string>
    <string name="inbox_new_msz">"رساله جديده"</string>
    <string name="inbox_sent_msz">"الرسائل المرسله"</string>
    <string name="inbox_setting">"الاعدادات"</string>
    <string name="find_a_member">"بحث عن مشتركة"</string>
    <string name="txt_cat1">"مكياج"</string>
    <string name="txt_cat2">"البشرة"</string>
    <string name="txt_cat5">"أزياء و موضة"</string>
    <string name="txt_cat3">"الشعر"</string>
    <string name="txt_cat8">"الغذاء الصحي والرشاقة"</string>
    <string name="txt_cat2_shpx">"هل لديك سؤال للمجربات؟"</string>
    <string name="txt_write_topic">"اكتبي مشاركة"</string>
    <string name="et_signup_name">"اسمك"</string>
    <string name="et_signup_username">"اسم المستخدم بالانجليزيه 3-10 حروف "</string>
    <string name="et_signup_nickname">"الاسم المستعار"</string>
    <string name="et_signup_password">"كلمة السر يجب ان لا تقل عن 6 حروف و أرقام"</string>
    <string name="et_signup_confirmpass">"تأكيد كلمة السر"</string>
    <string name="et_signup_email">"البريد الإلكتروني"</string>
    <string name="et_signup_city">"المدينة"</string>
    <string name="et_signup_country">"الدولة"</string>
    <string name="et_signup_register">"اشتراك"</string>
    <string name="et_signup_knowing">"كيف علمتي عن التطبيق؟"</string>
    <string name="bet_signup_register">"اشتراك"</string>
    <string name="bt_signup_signup">"اشتراك"</string>
    <string name="txt_unfollow">"الغاء المتابعة "</string>
    <string name="btn_signin_sign">"دخول"</string>
    <string name="bt_signin_sign">"تسجيل دخول"</string>
    <string name="bt_signin_forgetpass">"نسيت كلمة المرور؟"</string>
    <string name="et_signin_usernameoremail"> "اسم المستخدم \ بريدك الإلكتروني"</string>
    <string name="et_signup_key">"Enter Key"</string>
    <string name="txt_seen_by">"شاهدها"</string>
    <string name="txt_following">"تتابع "</string>
    <string name="txt_follower">"يتابعها"</string>
    <string name="txt_follow_her">"تابعيها"</string>
    <string name="txt_photo_album">"ألبوم الصور"</string>
    <string name="Toast_enter_text">"اكتب تعليقك هنا "</string>
    <string name="Toast_check_internet">"الرجاء التحقق كم اتصالك بالانترنت"</string>
    <string name="Toast_nocat_found">"​ خطأ في الوصول لهذا القسم الرجاء المحاوله مرة أخرى"</string>
    <string name="Toast_article_found">" خطأ ​في الوصول لهذه التدوينه  الرجاء المحاوله مر​ة  ​أ​خرى"</string>
    <string name="Toast_member_found">"​  خطأ في الوصول لهذه المشتركه الرجاء المحاوله مرة أخرى"</string>
    <string name="Toast_comments_txt">"​ تم اضافه تعليقك بنجاح"</string>
    <string name="txt_interaction">"التفاعلات"</string>
    <string name="back_string">"رجوع"</string>
    <string name="topbar_cat">"الأقسام"</string>
    <string name="topbar_new_article">"جديد المشاركات"</string>
    <string name="et_type_your_comment_here">"اكتب تعليقك هنا "</string>
    <string name="txt_body_details">"إعدادات الرسائل"</string>
    <string name="txt_signout">"تسجيل خروج"</string>
    <string name="txt_general_settings">"الاعدادات العامه"</string>
</resources>