<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E4E2"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_general_settings"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/btn_body_details"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/lsignout"
        android:text="@string/txt_general_settings"
        android:textColor="#f90452"
        android:textSize="27dp" />

    <Button
        android:id="@+id/btn_body_details"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/lbackgound_bottombar"
        android:text="@string/txt_body_details"
        android:textColor="#ffffff"
        android:textSize="27dp" />

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/btn_body_details"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/lsignout"
        android:text="@string/txt_signout"
        android:textColor="#f90452"
        android:textSize="27dp" />

</RelativeLayout>